SCKAN-167 feat: Connect forward connection autocomplete with backend
